objects/Problem__c.object
<CustomObject>
    <fields>
        <fullName>RCACommentsBySchneiderElectric__c</fullName>
        <description>Advanced I2P-comment to be entered by Schneider Electric for Root Cause Analysis</description>
        <label>Operational Root Cause Comments by SE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCAValidationbySE__c</fullName>
        <description>Advanced I2P - Validation of the Root Causes by Schneider Electric</description>
        <inlineHelpText>Validation of the Root Causes by Schneider Electric</inlineHelpText>
        <label>Operational Root Causes Validation by SE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REPDateOf8DCorrectionExec__c</fullName>
        <description>Advanced I2P - Date stored when the status of correction is set to execution</description>
        <label>Date Of 8D Correction Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REPProblemType__c</fullName>
        <description>Advanced I2P- Type of Problem</description>
        <formula>IF
( 
		$RecordType.DeveloperName ==&apos;Supplier&apos;, 
		&apos;External Supplier&apos;,
		If (
			AND 
			(
				$RecordType.DeveloperName ==&apos;Schneider&apos;,
				 AccountableOrganization__c == DetectionOrganization__c 
			),&apos;Internal Problems&apos;
			,&apos;Others (Internal Supplier or Customer)&apos; 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REPTimetoPlanCorrection__c</fullName>
        <formula>IF
(
	ISNULL( REPDateOf8DCorrectionExec__c ),
	TODAY() -   	DateOf8DStart__c ,
	REPDateOf8DCorrectionExec__c -DateOf8DStart__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Plan Correction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_D1_Score__c</fullName>
        <formula>if(Text(D1_Score__c)!=&apos;N/A&apos;,VALUE(text(D1_Score__c)),null)</formula>
        <label>REP D1 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_D2_Score__c</fullName>
        <formula>if(Text(D2_Score__c)!=&apos;N/A&apos;,VALUE(text(D2_Score__c)),null)</formula>
        <label>REP D2 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_D3_Score__c</fullName>
        <formula>if(Text(D3_Score__c)!=&apos;N/A&apos;,VALUE(text(D3_Score__c)),null)</formula>
        <label>REP D3 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RINIdentifier__c</fullName>
        <description>When a related ITB RIN (Rework INstruction) exists, the user would type its identifier on the Problem Containment section.</description>
        <inlineHelpText>RIN application has been retired; this field is no longer editable</inlineHelpText>
        <label>RIN Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIN_Identifier_Link__c</fullName>
        <formula>IF(RINIdentifier__c != null,
IF(OR(Contains(RINIdentifier__c,&apos;Notes://&apos;),Contains(RINIdentifier__c,&apos;http&apos;)),HYPERLINK(RINIdentifier__c,&quot;RIN Identifier Link&quot;),HYPERLINK(&quot;http://&quot;+RINIdentifier__c,&quot;RIN Identifier Link&quot;)),&apos;&apos;)</formula>
        <inlineHelpText>RIN application has been retired; this field is no longer editable</inlineHelpText>
        <label>&lt;RIN Identifier Link&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMANumber__c</fullName>
        <description>Advanced I2P - Identify the Return Material Authorization number used to send back the defective products.</description>
        <inlineHelpText>Identify the Return Material Authorization number used to send back the defective products.</inlineHelpText>
        <label>RMA Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RangeofImpactedCodes__c</fullName>
        <description>Describe exactly the range of codes impacted by the Problem. This is a PUBLIC FIELD, visible to all users.</description>
        <inlineHelpText>This field is no longer editable. Please use the Affected Product related list to declare the impacted offer and range.</inlineHelpText>
        <label>Range of Impacted Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recoveredproductsinstallations__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(Affectedproductsinstallations__c &gt;0, (Tech_RecoveredProductInstallations__c/ Affectedproductsinstallations__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Products Actually Affected above, proportion of products that have been contained so far. Products which have been inspected and determined not to be affected by the Problem are not counted here.</inlineHelpText>
        <label>% Products Contained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReminderD2NotesAttachement__c</fullName>
        <description>: I2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>IMAGE(&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp;&apos;       &apos; &amp;&quot;Attach the file with Data Collection &amp; Analysis results in the Notes &amp; Attachments section at the end of the form.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder !&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReminderD4NotesAttachement__c</fullName>
        <description>I2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>IMAGE(&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp;&apos;       &apos; &amp;&quot;Attach files with Cause-Effect Diagram and Root Cause Tree in the Notes &amp; Attachments section at the end of the form.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder !&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReminderSupplierD2NotesAttachement__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>IMAGE(IF( TEXT($User.UserType) == &apos;PowerPartner&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp; &apos; &apos; &amp; &quot;Please contact your Schneider Electric sponsor for the relevant templates. Once completed, attach the file with Data Collection &amp; Analysis results in the Notes &amp; Attachments section at the end of the form.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder !&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReminderSupplierD3NotesAttachement__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>IMAGE(IF( TEXT($User.UserType) == &apos;PowerPartner&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp;&apos; &apos; &amp;&quot;Please consider  the 4 types of containment when defining your  individual containment actions.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder !&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReminderSupplierD4NotesAttachement__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>IMAGE(IF( TEXT($User.UserType) == &apos;PowerPartner&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp;&apos; &apos; &amp;&quot;Please contact your Schneider Electric sponsor for the relevant templates. Once completed, attach files with Cause-Effect Diagram and Root Cause Tree in the Notes &amp; Attachments section at the end of the form.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder !&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoveSymptom__c</fullName>
        <description>Advanced I2P-remove symptom from problem</description>
        <formula>HYPERLINK( $Label.CLI2PAPR120002+Id+&apos;&amp;&apos;+$Label.CLI2PAPR120005+&apos;=&apos;+$Label.CLI2PAPR120007, &quot;Remove Symptom&quot;, &apos;_self&apos;)</formula>
        <label>&lt;RemoveSymptom&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskPriorityNumber__c</fullName>
        <description>Severity x Occurrence x Detection = number between 1 and 1000</description>
        <formula>IF(ISPICKVAL(Severity__c, &apos;Safety related&apos;), 1000,
CASE(Severity__c, &apos;Minor&apos;, 3,
&apos;Insignificant / Low&apos;, 1,
&apos;Moderately Significant&apos;, 5,
&apos;Significant / High&apos;, 7,
10)
*
CASE(Occurrence__c, &apos;Remote&apos;, 1, &apos;Low&apos;, 3,&apos;Moderate&apos;, 5,&apos;Frequent&apos;, 7,&apos;Virtually always&apos;,10,0)
*
CASE(Detection__c, &apos;Almost Certain&apos;, 1, &apos;High&apos;, 3,&apos;Moderate&apos;, 5,&apos;Very Low&apos;, 7,&apos;Absolute Uncertainty&apos;,10,0))</formula>
        <inlineHelpText>Severity x Occurrence x Detection =Number between 1 and 1000. This number is a preliminary indication of the Problem&apos;s level of importance. When Severity is Safety Related, RPN will be 1000.</inlineHelpText>
        <label>Risk Priority Number/Impact Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RootCauseTreeTemplate__c</fullName>
        <description>I2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink(&quot; http://teamwork.schneider-electric.com/seglobalprocesses/I2P/Shared%20Documents/Root%20Cause%20Tree%20Template.xls&quot;,&apos;Link to &quot;Root Cause Tree Template&quot;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Root Cause Tree Template &gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SensitivityIcon1__c</fullName>
        <formula>IF( ISPICKVAL( Sensitivity__c , &quot;Confidential&quot;), IMAGE(&quot;/resource/I2P_Confidential&quot;,&quot;CONFIDENTIAL&quot; ,20,20), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;SensitivityIcon1&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SensitivityIcon__c</fullName>
        <description>I2P - Sensitivity Icon when status is Confidential</description>
        <formula>IF( ISPICKVAL( Sensitivity__c , &quot;Confidential&quot;),   IMAGE(&quot;/resource/PI2P_Confidential&quot;,&quot;CONFIDENTIAL&quot; ,20,117),  &apos;&apos;)</formula>
        <label>&lt;SensitivityIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitivity__c</fullName>
        <description>Sensitivity of the Problem: Confidential Problems must not be communicated outside of Schneider Electric. Public Problems can be acknowledged on a need to know basis, while strictly obeying the instructions on the Problem record.</description>
        <inlineHelpText>Switch this to Public when the Problem has been confirmed and understood. Confidential Problems must not be disclosed outside of Schneider. Public Problems can be disclosed when needed, while strictly obeying the instructions on the Problem record.</inlineHelpText>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confidential</fullName>
                    <default>true</default>
                    <label>Confidential</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity of the Problem:

10 - Safety Related
7 - Significant/High
5 - Moderately Significant
3 - Minor
1 - Insignificant

-----------------Old Values below----
Severity of the Problem:
Minor = 1
Insignificant / Low = 3
Moderately Significant = 5
Significant / High = 7
Safety related = 10</description>
        <inlineHelpText>Severity of the Problem:

10 - Safety Related
7 - Significant/High
5 - Moderately Significant
3 - Minor
1 - Insignificant</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insignificant / Low</fullName>
                    <label>Insignificant</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderately Significant</fullName>
                </value>
                <value>
                    <fullName>Significant / High</fullName>
                    <label>Significant/High</label>
                </value>
                <value>
                    <fullName>Safety related</fullName>
                    <label>Safety Related</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SitesNotAffected__c</fullName>
        <description>OCT 15 Release : Roll-up Summary of # Sites Not Affected on Containment Action</description>
        <label># Sites Not Affected</label>
        <summarizedField>ContainmentAction__c.SitesNotAffected__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SitesPotentiallyAffected__c</fullName>
        <description>OCT 2015 Release : Roll-up Summary of # Sites Potentially Affected in Containment Action</description>
        <inlineHelpText>Number of END USER sites which, according to shipment and installation records, may be affected by the Problem.</inlineHelpText>
        <label># Sites Potentially Affected</label>
        <summarizedField>ContainmentAction__c.SitesPotentiallyAffected__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StatusOfContainment__c</fullName>
        <description>Status of containment actions. This is a PUBLIC FIELD, visible to all users.</description>
        <inlineHelpText>Indicate the current status of the Problem&apos;s containment plan. Update this field as needed, as the Problem progresses.</inlineHelpText>
        <label>Status of Containment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Waiting SE validation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusOfCorrection__c</fullName>
        <description>Status of corrective actions</description>
        <inlineHelpText>Indicate the current status of the Problem&apos;s correction plan. Update this field as needed, as the Problem progresses.</inlineHelpText>
        <label>Status of Correction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Waiting for SE validation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusOfPrevention__c</fullName>
        <description>Status of preventive actions</description>
        <inlineHelpText>Indicate the current status of the Problem&apos;s prevention plan. Update this field as needed, as the Problem progresses.</inlineHelpText>
        <label>Status of Prevention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Waiting for SE validation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusOfRootCauseAnalysis__c</fullName>
        <description>Status of root cause analysis</description>
        <inlineHelpText>Indicate the current status of the Problem&apos;s root cause analysis. Update this field as needed, as the Problem progresses.</inlineHelpText>
        <label>Status of Operational Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Waiting for SE validation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <description>Reason describing the Problem status</description>
        <inlineHelpText>Reason describing the Problem status</inlineHelpText>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Problem</description>
        <inlineHelpText>New - Problem reported, 8D project not started yet
Stand By - Problem on hold (see Status Reason for details)
In Progress - 8D project ongoing
Closed - All actions completed
Canceled - Problem no longer applicable (see Status Reason for details)</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Stand By</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusofSystemicRootCause__c</fullName>
        <label>Status of Systemic Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Waiting for SE validation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubFailureMode__c</fullName>
        <description>Dependent Picklist for Failure Mode</description>
        <inlineHelpText>Identify the  sub mode in which the above component is failing.</inlineHelpText>
        <label>Sub Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BOM / routing incorrect</fullName>
                </value>
                <value>
                    <fullName>Custom order processed incorrectly</fullName>
                </value>
                <value>
                    <fullName>Delivery done too early</fullName>
                </value>
                <value>
                    <fullName>Delivery done too late</fullName>
                </value>
                <value>
                    <fullName>Documentation or labeling incorrect</fullName>
                </value>
                <value>
                    <fullName>Missing / extra parts</fullName>
                </value>
                <value>
                    <fullName>Packaging is incorrect</fullName>
                </value>
                <value>
                    <fullName>Part selection incorrect</fullName>
                </value>
                <value>
                    <fullName>Adhesion / Blistering</fullName>
                </value>
                <value>
                    <fullName>Burrs / Flashing</fullName>
                </value>
                <value>
                    <fullName>Color or painting is incorrect</fullName>
                </value>
                <value>
                    <fullName>Corrosion / Rust / Water damage</fullName>
                </value>
                <value>
                    <fullName>Cracked / Broken / Deformed</fullName>
                </value>
                <value>
                    <fullName>Foreign substance / Contamination</fullName>
                </value>
                <value>
                    <fullName>Fretting</fullName>
                </value>
                <value>
                    <fullName>Insulation breakdown</fullName>
                </value>
                <value>
                    <fullName>Other appearance failure mode</fullName>
                </value>
                <value>
                    <fullName>Packaging is damaged</fullName>
                </value>
                <value>
                    <fullName>Shape or size is incorrect</fullName>
                </value>
                <value>
                    <fullName>Surface quality is incorrect</fullName>
                </value>
                <value>
                    <fullName>Wiring damaged</fullName>
                </value>
                <value>
                    <fullName>Wiring incorrect</fullName>
                </value>
                <value>
                    <fullName>Angle incorrect</fullName>
                </value>
                <value>
                    <fullName>Camber / Twist / Warp</fullName>
                </value>
                <value>
                    <fullName>Geometry defect / Shape / Alignment</fullName>
                </value>
                <value>
                    <fullName>Size / Diameter / Radius</fullName>
                </value>
                <value>
                    <fullName>Undesired features</fullName>
                </value>
                <value>
                    <fullName>Weld not conforming</fullName>
                </value>
                <value>
                    <fullName>Calibration not possible</fullName>
                </value>
                <value>
                    <fullName>Circuit does not close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummaryOfContainment__c</fullName>
        <description>Describe the containment actions that have been done and that are planned to be done. This is a PUBLIC FIELD, visible to all users.</description>
        <inlineHelpText>Summarize the containment actions that have been done, and that are still to be done on this Problem. Be brief; this is the executive summary. Detailed information about containment actions must be provided in the Containment Actions list below.</inlineHelpText>
        <label>Summary of Containment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SummaryOfCorrectiveAction__c</fullName>
        <description>Describe the corrective actions that have been done and that are planned to be done.</description>
        <inlineHelpText>Summarize the corrective actions that have been done, and that are still to be done on this Problem. Be brief; this is the executive summary. Detailed information about corrective actions must be provided in the Corrective Actions list below.</inlineHelpText>
        <label>Summary of Corrective Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SummaryOfPreventiveAction__c</fullName>
        <description>Describe the preventive actions that have been done and that are planned to be done.</description>
        <inlineHelpText>Summarize the preventive actions that have been done, and that are still to be done on this Problem. Be brief; this is the executive summary. Detailed information about preventive actions must be provided in the Preventive Actions list below.</inlineHelpText>
        <label>Summary of Preventive Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SummaryOfRootCauseAnalysis__c</fullName>
        <description>Describe the root causes that have been identified so far. This is a PUBLIC FIELD, visible to all users.</description>
        <inlineHelpText>Summarize the root causes identified so far, and any investigation that may still be in progress. Be brief; this is the executive summary. Detailed information about root causes must be provided in the Root Causes list below.</inlineHelpText>
        <label>Summary of Operational Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Correction_Effectiveness_Chec__c</fullName>
        <description>Describe the actions taken to check the effectiveness of corrective actions, and the results obtained. Attach supporting documents in Notes &amp; Attachments below.</description>
        <inlineHelpText>Describe the action take to check the effectiveness of corrective actions, and results obtained. Attach supporting documents in this record to provide further details</inlineHelpText>
        <label>Summary - Correction Effectiveness Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Prevention_Effectiveness_Chec__c</fullName>
        <description>Describe the actions taken to check the effectiveness of preventive actions, and the results obtained. Attach supporting documents in Notes &amp; Attachments below.</description>
        <inlineHelpText>Describe the actions taken to check the effectiveness of preventive actions, and the results obtained. Attach supporting documents in Notes &amp; Attachments below.</inlineHelpText>
        <label>Summary - Prevention Effectiveness Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SummaryofDataAnalysisConclusions__c</fullName>
        <description>I2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <inlineHelpText>Briefly explain which data has been analyzed and how, in order to understand the problem</inlineHelpText>
        <label>Summary of Data Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SummaryofSystemicRootCause__c</fullName>
        <label>Summary of Systemic Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summaryofthe8D__c</fullName>
        <label>Summary of the 8D</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupplierBatchNumber__c</fullName>
        <description>Advanced I2P - Identify the Delivery batch number</description>
        <inlineHelpText>Identify the Delivery batch number</inlineHelpText>
        <label>Supplier Batch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierCauseEffectDiagramTemplate__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink($Label.CLI2PFEB18002,&apos;Link to &quot;Cause-Effect diagram&quot; Template&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Cause Effect Diagram Template&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierDataCollectionTemplate__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink($Label.CLI2PFEB18003,&apos;Link to &quot;Data Collection &amp; analysis template&quot;&apos;)</formula>
        <label>&lt;Data Collection Template&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierPartnerBusinessName__c</fullName>
        <description>Advanced I2P- Supplier Business name visible for Supplier only</description>
        <formula>PartnerAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify the Supplier Name</inlineHelpText>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierProblemSponsorEmail__c</fullName>
        <description>Advanced I2P: Supplier Problem Sponsor Email</description>
        <formula>ProblemSponsor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Sponsor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierProblemSponsorPhone__c</fullName>
        <description>Advanced I2P: Problem Sponsor Phone for Supplier Layout</description>
        <formula>ProblemSponsor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Sponsor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierProblemSponsor__c</fullName>
        <description>Advanced I2P:Problem Sponsor for Supplier Layout</description>
        <formula>ProblemSponsor__r.FirstName &amp; &apos; &apos;&amp; ProblemSponsor__r.LastName</formula>
        <label>Problem Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierRootCauseTreeTemplate__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink($Label.CLI2PFEB18001,&apos;Link to &quot;Root Cause Tree Template&quot;&apos;)</formula>
        <label>&lt;Root Cause Tree Template &gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierSensitivity__c</fullName>
        <description>Advanced I2P - Suppliers Problems are confidential by definition.</description>
        <inlineHelpText>Suppliers Problems are confidential by definition.</inlineHelpText>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confidential</fullName>
                    <default>true</default>
                    <label>Confidential</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>